<resources>
    <string name="app_name">CabWay</string>


    <string name="error_fail_connection">Check your internet connection and try again.</string>


    //Ui text
    <string name="login_phone">Phone Number</string>
    <string name="new_password">Enter New Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ui_login">Login</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="ui_forgot_password">Forgot password ?</string>
    <string name="need_an_account"><u>Don\'t have an account? Sign Up</u></string>
    <string name="agency">Agency</string>
    <string name="driver">Driver</string>
    <string name="forgot_password_message">Don\'t worry! Just enter your phone number and we will send you the password reset instruction </string>
    <string name="otp_text">Please enter the One Time Password (OTP) sent to your mobile number. *</string>
    <string name="not_received_your_code">Not received your OTP?</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="otp">OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="otp_sent">OTP sent to your mobile number.</string>
    <string name="otp_length_message">Please enter 4 digit OTP.</string>
    <string name="otp_verification_success_message">OTP verified successfully.</string>
    <string name="otp_verification_failed_message">Please Enter Valid OTP</string>
    <string name="new_password_message">Please Enter Your New Password. </string>
    <string name="mobile_length_message">Please enter valid mobile number.</string>
    <string name="password_mismatch_message">Both password should match.</string>
    <string name="mandatory_messages">Please Enter %1$s.</string>
    <string name="registration_success">User Registered Successfully.</string>
    <string name="step">Step</string>
    <string name="currency_text">₹</string>
    <string name="km_text">km</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="find_a_route">FIND A ROUTE</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="document_number">Document Registration Number</string>
    <string name="registration_number">Registration Number</string>
    <string name="shop_act_number">Shop Act Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="name_on_document">Name On Document</string>
    <string name="name_of_shop">Name Of Shop</string>
    <string name="state_name">State Name</string>
    <string name="gst_number">GST Number</string>
    <string name="continue_bt">Continue</string>
    <string name="create_ride">Create Ride</string>
    <string name="no_data_available">No Data Available</string>
    <string name="preferred_city">Preferred City</string>
    <string name="select_city">Select City</string>
    <string name="driver_details">Driver Details</string>
    <string name="please_select_city">Please Select State And City</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="error_expiry_date">Expiry Date</string>
    <string name="issued_on">Issued Date :</string>
    <string name="error_issued_on">Issued Date :</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="date_of_journey">DATE OF JOURNEY :</string>
    <string name="time_of_journey">TIME OF JOURNEY :</string>
    <string name="car_type">CAR TYPE :</string>
    <string name="trip_mode">TRIP MODE :</string>
    <string name="agency_number">AGENCY NUMBER :</string>
    <string name="status">Status</string>
    <string name="call_agency">CALL AGENCY</string>
    <string name="call_driver">CALL DRIVER</string>
    <string name="request">REQUEST</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="car_type_hint">CAR TYPE</string>
    <string name="date_of_journey_hint">DATE OF JOURNEY</string>
    <string name="time_of_journey_hint">TIME OF JOURNEY</string>
    <string name="agency_number_hint">AGENCY MOBILE NO</string>
    <string name="trip_mode_hint">TRIP MODE</string>
    <string name="cost_of_trip_hint">COST OF TRIP</string>
    <string name="book_a_ride">BOOK RIDE</string>
    <string name="distance_hint">DISTANCE</string>
    <string name="book_ride">Book Ride</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">PinCode</string>
    <string name="invalid_email">Please Enter Valid Email.</string>
    <string name="address_length">Address length should be more than 10 character. </string>
    <string name="password_length">Password length should be more than 4 character. </string>
    <string name="date_validation">Expiry date should be greater than issued date</string>
    <string name="date_validation_create_ride">Drop off date should be greater than Pickup date</string>
    <string name="full_name">Full Name</string>
    <string name="agency_name">Agency Name</string>
    <string name="name">Name :</string>
    <string name="role">Role</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="create_new_ride">Create A New Ride</string>
    <string name="city_updated_success">City Updated Successfully</string>
    <string name="update">UPDATE</string>
    <string name="skip">SKIP</string>
    <string name="preferred_city_description">Please select your preferred city so we can display you related rides.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_new">New</string>
    <string name="title_requested">Requested</string>
    <string name="title_accepted">Accepted</string>
    <string name="car_type_img">Car Type Image</string>
    <string name="one_way_ride">One Way</string>
    <string name="two_way_ride">Two Way</string>
    <string name="ride_type">Ride Type</string>
    <string name="pickup_date_time">PICKUP DATE AND TIME</string>
    <string name="drop_off_date_time">DROP OFF DATE AND TIME</string>

    //dummy text
    <string name="dummy_document_type_text">Step 1 : Document Type</string>
    <string name="dummy_agency_name_text">Neeta Travel Agency</string>
    <string name="dummy_amount_text">250000000</string>
    <string name="dummy_date_text">12–06–2019 02:12 am</string>
    <string name="to">to</string>
    <string name="dummy_time_text">12:50 pm</string>
    <string name="dummy_city_text">Pune</string>
    <string name="dummy_city_2_text">Mumbai</string>
    <string name="dummy_km_text">100</string>
    <string name="dummy_car_type">ABC</string>
    <string name="dummy_trip_mode">PQR</string>
    <string name="dummy_agency_number">1234567890</string>

    // Screen Labels
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registration">Registration</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">Some Description</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="document_upload">Document Upload</string>
    <string name="shop_act_registration">Shop Act Details</string>
    <string name="help_activity">Help</string>
    <string name="about_us">About Us</string>
    <string name="rides_history">History</string>
    <string name="ride_details">Ride Details</string>
    <string name="call_us">CALL US</string>
    <string name="call_us_for_help">CALL US FOR HELP</string>
    <string name="write_us_on">WRITE US ON</string>
    <string name="cab_way_email">info@Cabway.in</string>
    <string name="write_us">WRITE US</string>
    <string name="add_doc">Add Document</string>
    <string name="upload_img">Upload Image</string>
    <string name="document_invalid_field">Please Enter Valid %1$s.</string>
    <string name="update_ride">Update Ride</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="history">History</string>
    <string name="documents">Documents</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="registration_exit_message">Are you sure you want to exit registration?</string>
    <string name="accept_reject_message">Are you sure you want to %1$s this Driver?</string>

    <string name="upgrade_message">New Update is available.. Please update the app.</string>


    <!--Document types-->
    <string name="driver_license">Driver License</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="vehicle_permit">Vehicle Permit</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="shop_act">Shop Act</string>
    <string name="about_us_text">Cab Way is an initial online app for Tour/Cab operators wherever they\'ll share every other\'s unoccupied cabs for intercity and intra city journeys. It bridges the gap between the drivers and tour operators by connecting them. It helps them to own optimum utilization of their Inventory and obtaining cabs at the time of their want and thereby increasing their profits. It solves the matter of running vacant vehicles on collect/drop journeys in near cities</string>


</resources>
