<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".ui.activities.LoginActivity">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/driver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/driver"
                android:checked="true"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/agency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/agency"
                android:textSize="16sp" />


        </RadioGroup>

        <EditText
            android:id="@+id/phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/login_phone_email"
            android:inputType="phone|textEmailAddress"
            android:maxLines="1"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/black"
            android:text="@string/ui_login"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/ui_forgot_password"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/need_an_account"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

</LinearLayout>