<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".ui.activities.PreferredCityActivity">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/preferred_city_description" />

        <TextView
            android:id="@+id/tv_state_hint"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/state" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_state"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_city_hint"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/city" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_city"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/black"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text" />

</LinearLayout>
